--- a/app/src/main/res/layout/activity_register_as.xml
+++ b/app/src/main/res/layout/activity_register_as.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".RegisterAs">
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,27 +20,35 @@
         />
 
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_60sdp"
-            android:id="@+id/RegAs_btn_QuranCenter"
-            android:textSize="@dimen/_25ssp"
-            android:layout_marginTop="@dimen/_60sdp"
-            android:layout_marginStart="@dimen/_30sdp"
-            android:layout_marginEnd="@dimen/_30sdp"
-            android:textColor="@android:color/white"
-            android:text="مركز التحفيظ"
-            android:textStyle="bold"
-            android:background="@drawable/btn_background"
-            android:textAlignment="center"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_60sdp"
+        android:id="@+id/RegAs_btn_QuranCenter"
+        android:textSize="@dimen/_25ssp"
+        android:layout_marginTop="@dimen/_50sdp"
+        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginEnd="@dimen/_30sdp"
+        android:textColor="@android:color/white"
+        android:text="مركز التحفيظ"
+        android:textStyle="bold"
+        android:background="@drawable/btn_background"
+        android:textAlignment="center"/>
 
+    <View
+        android:id="@+id/divider1"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_2sdp"
+        android:background="@android:color/darker_gray"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="@dimen/_60sdp"
         android:id="@+id/RegAs_btn_Teacher"
         android:textSize="@dimen/_25ssp"
-        android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_30sdp"
         android:layout_marginEnd="@dimen/_30sdp"
         android:textColor="@android:color/white"
@@ -47,12 +56,22 @@
         android:textStyle="bold"
         android:background="@drawable/btn_background"
         android:textAlignment="center"/>
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_2sdp"
+        android:background="@android:color/darker_gray"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"/>
+
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="@dimen/_60sdp"
         android:id="@+id/RegAs_btn_Guardian"
         android:textSize="@dimen/_25ssp"
-        android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_30sdp"
         android:layout_marginEnd="@dimen/_30sdp"
         android:textColor="@android:color/white"
@@ -60,5 +79,30 @@
         android:textStyle="bold"
         android:background="@drawable/btn_background"
         android:textAlignment="center"/>
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_2sdp"
+        android:background="@android:color/darker_gray"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_60sdp"
+        android:id="@+id/RegAs_btn_addJoiningRequest"
+        android:textSize="@dimen/_25ssp"
+        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginEnd="@dimen/_30sdp"
+        android:textColor="@android:color/white"
+        android:text="إرسال طلب إنضمام"
+        android:textStyle="bold"
+        android:background="@drawable/btn_background"
+        android:textAlignment="center"/>
+
+
 
 </LinearLayout>
