--- a/app/src/main/res/drawable-v24/et_background.xml
+++ b/app/src/main/res/drawable-v24/et_background.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke
-        android:color="@color/colorPrimary"
+    <stroke android:color="@color/colorPrimary"
         android:width="@dimen/_2sdp"/>
     <corners android:radius="@dimen/_300sdp"/>
 </shape>
