--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,8 @@
 
 
 
-<!--Ahmed-->
-<!--    <color name="colorPrimary">#015072</color>
-    <color name="colorPrimaryDark">#013657</color>
-    <color name="colorAccent">#0388DA</color>-->
+<!--mustafa-->
+<!--
+      <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorAccent">#03A9F4</color>-->
