--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 
 
-    <color name="colorPrimary">#015072</color>
+    <color name="colorPrimary">#0D9DDC</color>
     <color name="colorPrimaryDark">#013657</color>
     <color name="colorAccent">#0388DA</color>
     <color name="primary_light">#BBDEFB</color>
